--- a/assignment2/stylerahina.css
+++ b/assignment2/stylerahina.css
@@ -52,15 +52,15 @@ h1 {
 }
 
 
-.name1{
+.nameChicken{
   background-color: #FFB6C1;
 }
 
-.name2{
+.nameBeef{
   color: white;
   background-color: #FF0000;
 }
-.name3{
+.nameSushi{
   background-color: #FFFF00;
 }
 
